@@ -28,9 +28,8 @@
 
 (define-minor-mode rails-migration-minor-mode
   "Minor mode for RubyOnRails migrations."
-  nil
-  " migration"
-  nil
+  :lighter " Migration"
+  :keymap (rails-model-layout:keymap :migration)
   (setq rails-primary-switch-func nil)
   (setq rails-secondary-switch-func 'rails-model-layout:menu))
 
